--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,7 +4,13 @@
     padding: 0;
 }
 
+
+html {
+    font-family: 'Roboto', sans-serif;
+}
+
 .container {
+    position: relative;
     width: 1140px;
     margin: 0 auto;
 }
@@ -25,7 +31,6 @@
 .logo .logo_text {
     margin-top: 12px;
     color: #ffffff;
-    font-family: 'Roboto';
     font-size: 15px;
     font-weight: 500;
     text-transform: uppercase;
@@ -43,18 +48,16 @@ h2.title {
 
 .title {
     color: #f9bf3b;
-    font-family: 'Roboto';
     font-size: 41px;
-    font-weight: 400;
+    font-weight: 900;
     text-transform: uppercase;
     text-align: center;
 }
 
 .simple .title_big {
     color: #ffffff;
-    font-family: 'Roboto';
     font-size: 80px;
-    font-weight: 400;
+    font-weight: 900;
     text-transform: uppercase;
     text-align: center;
     margin-top: 20px;
@@ -64,7 +67,6 @@ h2.title {
     padding: 0 13px;
     margin-top: 20px;
     color: #ffffff;
-    font-family: 'Roboto Light';
     font-size: 21px;
     line-height: 24px;
     font-weight: 300;
@@ -74,11 +76,10 @@ h2.title {
 .promo .promo_text span {
     color: #f9bf3b;
     font-weight: 700;
-    font-family: 'Roboto - Bold';
     text-transform: uppercase;
 }
 
-.promo .promo_btn {
+.promo .promo_btn, .gift .gift_btn {
     display: block;
     margin: 0 auto;
     margin-top: 61px;
@@ -89,17 +90,20 @@ h2.title {
     background-image: linear-gradient(0.0deg, #2798b9 0%, #3ab6da 100%);
     cursor: pointer;
     color: #ffffff;
-    font-family: 'Roboto Condensed';
     font-size: 21px;
-    font-weight: 400;
+    font-weight: 500;
     text-transform: uppercase;
     /* text-shadow: -1px -1px 0px rgba(0,0,073,0.21); */
     outline: none;
 }
 
-.promo .promo_btn:hover {
+.promo .promo_btn:hover, .gift .gift_btn:hover {
     box-shadow: inset 0 0 0 rgba(0,0,0,0.50);
     background-image: linear-gradient(0.0deg, #074f65 0%, #0b4454 100%);
+}
+
+.gift .gift_btn {
+    margin-top: 53px;
 }
 
 .more {
@@ -108,9 +112,8 @@ h2.title {
 
 .more .more_text {
     color: #ffffff;
-    font-family: 'Roboto - Thin';
     font-size: 15px;
-    font-weight: 400;
+    font-weight: 300;
     text-transform: uppercase;
     text-align: center;
 }
@@ -128,20 +131,27 @@ h2.title {
 
 .waiting {
     padding: 85px 0 75px 0;
-    height: 604px;
+    min-height: 604px;
     background-color: #efefef;
 }
 
-.waiting .waiting_header {
+.waiting .waiting_header, .finish .finish_header, .webinar .webinar_title {
     color: #252525;
-    font-family: 'Roboto';
     font-size: 30px;
-    font-weight: 400;
+    font-weight: 500;
     text-transform: uppercase;
     text-align: center;
 }
 
-.waiting .waiting_divider {
+.finish .finish_header {
+    color: #ffffff;
+}
+
+.webinar .webinar_title {
+    margin-top: 37px;
+}
+
+.waiting .waiting_divider, .finish .finish_divider {
     margin: 0 auto;
     margin-top: 18px;
     width: 217px;
@@ -151,9 +161,8 @@ h2.title {
 
 .waiting .waiting_subheader {
     margin-top: 17px;
-    font-family: 'Roboto';
     font-size: 23px;
-    font-weight: 400;
+    font-weight: 500;
     color: #4a4a4a;
     text-align: center;
 }
@@ -170,7 +179,7 @@ h2.title {
 }
 
 /* .waiting .waiting_wrapper .waiting_item {
-    display: inline-block;
+    display: inline-block; у каждого из элементов
     vertical-align: center;
     margin: 0 15px
     width: 339px;
@@ -184,10 +193,182 @@ h2.title {
 
 .waiting .waiting_wrapper .waiting_item .waiting_descr {
     margin-top: 33px;
-    font-family: 'Roboto';
     font-size: 15px;
     line-height: 21px;
     font-weight: 300;
     color: #4a4a4a;
     text-align: center;
 }
+
+/* optimization */
+
+.optimization {
+    min-height: 550px;
+    padding: 102px 0  0;
+}
+
+.optimization .optimization_img {
+    position: absolute;
+    top: -48px;
+    left: -240px;
+    z-index: -1;
+}
+
+
+.optimization .optimization_header {
+    margin-left: 391px;
+    font-size: 30px;
+    line-height: 12px;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: #299cbd;
+}
+
+.optimization .optimization_text {
+    margin-left: 391px;
+    margin-top: 25px;
+    font-size: 17px;
+    line-height: 25px;
+    font-weight: 300;
+    color: #4a4a4a;
+}
+
+.optimization .optimization_text span {   
+    font-weight: 700;
+}
+
+/* finish */
+
+.finish {
+    background: url('../img/background/second_bg.jpg') center center/cover no-repeat;
+    min-height: 450px;
+    padding: 86px 0 79px 0;
+}
+
+.finish .finish_wrapper {
+    margin-top: 41px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.finish .finish_wrapper .finish_item {
+    max-width: 204px;
+}
+
+.finish .finish_wrapper .finish_item .finish_round {
+    display: flex;
+    justify-content: center ;
+    align-items: center;
+    margin: 0 auto;
+    width: 115px;
+    height: 115px;
+    background-color: #b4e2ff;
+    border-radius: 50%;
+
+}
+
+/* .finish .finish_wrapper .finish_item .finish_descr .finish_icon {
+} */
+
+.finish .finish_wrapper .finish_item .finish_descr {
+    margin-top: 25px;
+    font-size: 17px;
+    line-height: 20px;
+    font-weight: 300;
+    color: #efefef;
+    text-align: center;
+}
+
+/* gift */
+
+.gift {
+    padding: 86px 0 87px 0;
+    min-height: 628px;
+    background-color: #efefef;
+}
+
+.gift .gift_img {
+    display: block;
+    margin: 0 auto;
+}
+
+.gift .gift_text {
+    margin-top: 43px;
+    font-size: 30px;
+    line-height: 43px;
+    font-weight: 500;
+    color: #252525;
+    text-align: center;
+}
+
+/* webinar */
+
+.webinar {
+    min-height: 515px;
+    padding: 91px 0 64px 0;
+}
+
+.webinar .first_img{
+    display: block;
+    margin: 0 auto;
+}
+
+.webinar .webinar_time {
+    margin-top: 32px;
+    font-size: 36px;
+    line-height: 12px;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: #299cbd;
+    text-align: center;
+}
+
+.webinar .webinar_text {
+    margin-top: 26px;
+    font-size: 23px;
+    font-weight: 500;
+    color: #4a4a4a;
+    text-align: center;
+}
+
+/* foooter */
+
+.footer {
+    padding: 61px 0 69px 0;
+    min-height: 166px;
+    background-color: #1a1a1a;
+}
+
+.footer .contact {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.footer a {
+    display: block;
+    font-family: 'Roboto';
+    font-size: 15px;
+    line-height: 21px;
+    font-weight: 300;
+    text-decoration: underline;
+    color: #888888;
+    text-align: center;
+}
+
+.footer span {
+    margin: 0 7px 0 7px;
+    color: #888888;
+}
+
+.footer .address {
+    display: block;
+    font-family: 'Roboto';
+    font-size: 15px;
+    line-height: 21px;
+    font-weight: 300;
+    text-decoration: none;
+    color: #888888;
+    text-align: center;
+}
+
