--- a/src/css/style.css
+++ b/src/css/style.css
@@ -91,7 +91,8 @@ h2.title {
     cursor: pointer;
     color: #ffffff;
     font-size: 21px;
-    font-weight: 500;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 400;
     text-transform: uppercase;
     /* text-shadow: -1px -1px 0px rgba(0,0,073,0.21); */
     outline: none;
@@ -138,7 +139,7 @@ h2.title {
 .waiting .waiting_header, .finish .finish_header, .webinar .webinar_title {
     color: #252525;
     font-size: 30px;
-    font-weight: 500;
+    font-weight: 400;
     text-transform: uppercase;
     text-align: center;
 }
@@ -162,7 +163,7 @@ h2.title {
 .waiting .waiting_subheader {
     margin-top: 17px;
     font-size: 23px;
-    font-weight: 500;
+    font-weight: 400;
     color: #4a4a4a;
     text-align: center;
 }
@@ -297,7 +298,7 @@ h2.title {
     margin-top: 43px;
     font-size: 30px;
     line-height: 43px;
-    font-weight: 500;
+    font-weight: 400;
     color: #252525;
     text-align: center;
 }
@@ -327,7 +328,7 @@ h2.title {
 .webinar .webinar_text {
     margin-top: 26px;
     font-size: 23px;
-    font-weight: 500;
+    font-weight: 400;
     color: #4a4a4a;
     text-align: center;
 }
